FRESH-728 preparing the grounds